--- a/setup.cfg
+++ b/setup.cfg
@@ -22,5 +22,11 @@ ignore_missing_imports = True
 # because pytest explicitly specifies each file being tested, and that overrides mypy's exclude.
 exclude = version\.py
 
+[mypy-lsst.*]
+# Work around problems from mypy not knowing what type __path__ is
+# and DM using __path__ in python/lsst/__init__.py files.
+# This will probaby be fixed by https://github.com/python/mypy/issues/1422
+ignore_errors = True
+
 [metadata]
 version = attr: setuptools_scm.get_version
