--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,7 +8,7 @@ source:
   path: ../
 
 build:
-  noarch: generic
+  noarch: python
   script: python -m pip install --no-deps --ignore-installed .
 
 test:
@@ -18,6 +18,7 @@ test:
     - python
     - tests
     - setup.cfg
+    - pyproject.toml
   commands:
     - pytest
 
