--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ flake8-ignore = ["E133", "E203", "E226", "E228", "N802", "N803", "N806", "N812",
 flake8-max-line-length = 110
 flake8-max-doc-length = 79
 asyncio_mode = "auto"
+log_level = "INFO"
 
 [tool.isort]
 profile = "black"
