Add aiohttp as test and run dependencies in conda recipe.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,6 +14,7 @@ build:
 test:
   requires:
     - ts-conda-build =0.3
+    - aiohttp
   source_files:
     - python
     - tests
@@ -37,3 +38,4 @@ requirements:
     - python {{ python }}
     - setuptools
     - setuptools_scm
+    - aiohttp
