Remove scons support

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
 __pycache__
-.scon*
-.eggs
-*.egg_info
-.vscode
-
-# Built by the build system
+*.egg
+*.egg-info
+*.pyc
+*.log
 version.py
 
-# Pytest
+# editors
+.vscode
+
+# pytest
 tests/.tests
 pytest_session.txt
-.mypy_cache
+.hypothesis
 .pytest_cache
 .coverage
-.hypothesis
-*.log
-
-# Editors
-.vscode
