--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ pytest_session.txt
 .hypothesis
 .pytest_cache
 .coverage
+
+# ts_pre_commit_config
+.pre-commit-config.yaml
+.flake8
+.isort.cfg
+.mypy.ini
