Add the string in build section.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -10,6 +10,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install --no-deps --ignore-installed .
+  string: "py{{ PY_VER | replace('.', '') }}{{ PKG_HASH }}_{{ PKG_BUILDNUM }}"
 
 test:
   requires:
